Upgradded: Quarkus 3.26.1, Gradle 9.0.0, can use Java24